--- a/client/src/index.css
+++ b/client/src/index.css
@@ -232,7 +232,8 @@ ul {
 }
 .form-label {
   display: block;
-  font-size: var(--smallText);
+  font-size: 1.2rem;
+  text-align: center;
   margin-bottom: 0.5rem;
   text-transform: capitalize;
   letter-spacing: var(--letterSpacing);
